--- a/src/App.css
+++ b/src/App.css
@@ -25,10 +25,9 @@
   color: black;
 }
 
-.TypeWriterEffect {
+.react-typewriter-text {
  animation: 
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-end infinite;
+    typing 3.5s steps(40, end);
 }
 
 .App-link {
@@ -44,20 +43,11 @@
   }
   
  @keyframes typing {
-  from { 
-    width: 0 
+  from width { 
+    transform: 0 
   }
-  to { 
-    width: 100% 
-  }
-}
-
-@keyframes blink-caret {
-  from, to { 
-    border-color: transparent 
-  }
-  50% { 
-    border-color: orange; 
+  to width { 
+    transform: 100% 
   }
 }
 }
