--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-image: url('https://data.whicdn.com/images/356058336/original.jpg');
+  background-image: url('https://pin.it/1DsYlyw');
   min-height: 100vh;
   display: flex;
   flex-direction: column;
