--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-image: url('https://pin.it/1DsYlyw');
+  background-image: url('https://pin.it/12dss4M');
   min-height: 100vh;
   display: flex;
   flex-direction: column;
