--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F596234438146036149%2F&psig=AOvVaw204MPSioRflR363rt2Le3E&ust=1637419900405000&source=images&cd=vfe&ved=0CAwQjhxqFwoTCKC5q8_WpPQCFQAAAAAdAAAAABAN');
+  background-image: url('https://wallpaperaccess.com/full/2641074.gif');
   min-height: 100vh;
   display: flex;
   flex-direction: column;
