--- a/src/App.css
+++ b/src/App.css
@@ -22,11 +22,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   font-weight: 700;
-  color: black;
-}
-
-.App-link {
-  color: #000000;
+  color: white;
 }
 
 @keyframes App-logo-spin {
