--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,14 @@
     margin: 2px .25in 0 .25in;
 }
 
+#error {
+    color: white;
+    margin-top: 5px;
+    font-size: 10px;
+    font-family: 'Courier New';
+    font-style: italic;
+}
+
 h3 {
     font-size: 40px;
     color: white;
@@ -53,7 +61,6 @@ h3 {
 td {
     font-size: 20px;
     padding: 5px 45px 5px 45px;
-    
 }
 
 tr:nth-child(odd) {
